k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: examint
  namespace: examint
spec:
  selector:
    app: examint
  ports:
    - port: 80
      targetPort: 3000
