k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: examint
  namespace: examint
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-culvii
    nginx.ingress.kubernetes.io/proxy-body-size: 64m
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: examint.sandbox.culvii.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: examint
                port:
                  number: 80
  tls:
    - hosts:
        - examint.sandbox.culvii.com
      secretName: examint-tls
